[project]
name = "terrain-urdf-marker"
version = "0.1.0"
description = "A package for generating URDF markers for terrain in robotics simulations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "genesis-world>=0.2.0",
  "libigl==2.5.1",
  "trimesh",
  "numpy",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true